add gin query string api example
